javascript-fundamentals/test/syntax-errors/problem1.js
let expect = require('chai').expect;

let f = require('../../src/syntax-errors/problem1.js');

console.log('Everything OK!');
